# blackjack

./: README.md  blackjack.py  card.py  game.py  hand.py  main.py  player.py  plot.py  plots.py  pyproject.toml  rules.py  simulation.py
_models/: q_learning_player.pkl
executables/: main.py  simulation.py
src/: card.py  game.py  hand.py  main.py  player.py  player_utils.py  rules.py  simulation.py
src/static/: plot.py
test/: main.py
tools/: ml_trainer.py
visualization/: plot.py  plots.py
