[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackjack"
version = "0.1.0"
description = "Blackjack simulation and AI players"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]